syntax = "proto2";

message NodeMessage {
    required string type = 1;
    required string name = 2;
}
