syntax = "proto2";

import "typeelement.proto";
import "valuetype.proto";

message EntityMessage {
    required TypeOfElementProto type_of_element = 1;
    required ValueTypeProto value_type = 2;
    required string name = 3;
}
